--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Ktop_food_app_store"
         tools:targetApi="31">
         <activity
+            android:name=".view.activity.Auth.ForgotPasswordActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.activity.Auth.LoginActivity"
             android:exported="false" />
         <activity
