--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Ktop_food_app_store"
         tools:targetApi="31">
         <activity
+            android:name=".view.activity.OrderHistoryDetailsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.activity.OrderHistoryActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.activity.HomeActivity"
             android:exported="false" />
         <activity
