fix: conflict merge

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,11 @@
             android:name=".view.activity.OrderProcessDetailActivity"
             android:exported="false" />
         <activity
-            android:name=".view.activity.OrderProcessActivity"
             android:name=".view.activity.EditItemActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.activity.OrderProcessActivity"
+
             android:exported="false" />
         <activity
             android:name=".view.activity.FoodListActivity"
